<resources>
    <string name="app_name">Hangman</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="wie_lautet_dein_gamertag">Wie lautet dein Gamertag?</string>
    <string name="start">START</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="wie_lautet_der_gamertag_deines_gegners">Wie lautet der Gamertag deines Gegners?</string>
    <string name="credits">Credits</string>
    <string name="michel_d_rffel">Michel Dörffel</string>
    <string name="nico_bauer">Nico Bauer</string>
    <string name="enrico_adler">Enrico Adler</string>
    <string name="paul_wunderlich">Paul Wunderlich</string>
    <string name="maximilian_buchholz">Maximilian Buchholz</string>
    <string name="danke_f_r_das_interesse_an_unserem_hangman_projekt">Danke für das Interesse an unserem Hangman Projekt!</string>
    <string name="Scoreboard">Scoreboard</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="wie_lautet_das_erste_wort">Wie lautet das erste Wort?</string>
    <string name="verloren">Verloren</string>
    <string name="gewonnen">Gewonnen</string>
    <string name="beenden">Beenden</string>
    <string name="nochmal_spielen">Nochmal spielen</string>
    <string name="teilen">Teilen</string>
    <string name="schade">Schade!</string>
    <string name="herzlichen_glueckwunsch">Herzlichen Glückwunsch!</string>
    <string name="wort_eingeben">Wort eingeben</string>
    <string name="weiter">Weiter</string>
    <string name="fail">FAIL</string>
    <string name="bild_1">Bild 1</string>
    <string name="bild_2">Bild 2</string>
    <string name="bild_3">Bild 3</string>
    <string name="bild_4">Bild 4</string>
    <string name="bild_5">Bild 5</string>
    <string name="bild_6">Bild 6</string>
    <string name="bild_7">Bild 7</string>
    <string name="bild_8">Bild 8</string>
    <string name="bild_9">Bild 9</string>
</resources>
