<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.tu_dresden.hangman.MainMenu"
    tools:layout_editor_absoluteY="81dp"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/simpleImageView"
        android:layout_width="179dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/Hangman"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/simpleImageView_Hexe"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:src="@drawable/hexe"
        app:layout_constraintBottom_toBottomOf="@+id/simpleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleImageView" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleImageView">


        <Button
            android:id="@+id/buttonSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openSingleplayer"
            android:text="@string/singleplayer"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="320dp" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openMultiplayer"
            android:text="@string/multiplayer"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="388dp" />

        <Button
            android:id="@+id/buttonScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openScore"
            android:text="@string/Scoreboard"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openCredits"
            android:text="@string/credits"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="447dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
